--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
             <div>
                 <a href="">Home</a>
                 <a href="">About</a>
+                <a href="">Projects</a>
                 <a href="">Contact Me</a>
             </div>
         </nav>
     </div>
-    <h1>My Portfolio</h1>
+    <h1>Myself</h1>
     <hr id="red_lines">
     <br>
     <hr id='top_blue_line'>
@@ -34,27 +35,70 @@
     <hr id="red_lines">
     <br>
     <hr>
-    <br>
+    <p>Proficient in;</p>
     <hr>
     <br>
     <hr id="red_lines">
     <br>
     <hr>
-    <br>
+    <p>Ruby on Rails, React, JavaScript</p>
     <hr>
     <br>
     <hr id="red_lines">
     <br>
     <hr>
-    <br>
+    <p>I love to ...</p>
     <hr>
     <br>
     <hr id="red_lines">
     <br>
     <hr>
-    <br>
+    <p>Manage and build software products</p>
     <hr>
     <br>
     <hr id="red_lines">
+    </div>
+    <div>
+        <h1>About</h1>
+        <hr>
+        <br>
+        <p id="about_p">A Software Entrepreneur with an innate passion for software development,</p>
+        <br>
+        <hr>
+        <br>
+        <hr>
+        <br>
+        <p id="about_p"> digital marketing, and public speaking.</p>
+        <br>
+        <hr>
+        <br>
+        <hr>
+        <br>
+        <p id="about_p">I am a full-stack developer with an interest</p>
+        <br>
+        <hr>
+        <br>
+        <hr>
+        <br>
+        <p id="about_p">in Ruby On Rails, JavaScript,</p>
+        <br>
+        <hr>
+        <br>
+        <hr>
+        <br>
+        <p id="about_p">and React and I'm open to any new opportunities in software development.</p>
+        <br>
+        <hr>
+        <br>
+        <hr>
+        <br>
+        <p id="about_p">I work with people to understand their needs and identify ways to help them visualize and build them.</p>
+        <br>
+        <hr>
+    </div>
+    <div>
+        <h1>My Projects</h1>
+    </div>
+
 </body>
 </html>
