--- a/index.html
+++ b/index.html
@@ -98,6 +98,109 @@
     </div>
     <div>
         <h1>My Projects</h1>
+        <div class='projects' id="portfolio">
+            <div class="project">
+              <img class='project_img' src="./assets/sendlibra.png" alt="project1">
+              <div class="p_details">
+                <h2 class='p_name'>SendLibra</h2>
+                <p class="p_date">10 Jul. 2021</p>
+                <p class="p_description">
+                  It is an website I built for a client who wanted to enable his customers send money easily across borders.
+                  I designed and built the webiste using bootstrap
+                </p>
+                <div class="p_tags">
+                  <p class="p_tag">HTML</p>
+                  <p class="p_tag">CSS</p>
+                  <p class="p_tag">Bootstrap</p>
+                </div>
+                <div class="p_links">
+                  <a target="_blank" href="#">
+                    <i class="fab fa-github"></i> Source
+                  </a>
+                  <a target="_blank" href="http://sendlibra.com/">
+                    <i class="fa fa-sign-out-alt"></i> Live Demo
+                  </a>
+                </div>
+              </div>
+              <div class='projects' id="portfolio">
+                <div class="project">
+                  <img class='project_img' src="./assets/iflix.png" alt="project1">
+                  <div class="p_details">
+                    <h2 class='p_name'>Iflix</h2>
+                    <p class="p_date">10 Jul. 2021</p>
+                    <p class="p_description">
+                        This is a single-page website we built known as iflix. 
+                        The purpose of this site was to test our knowledge of HTML, CSS but mostly on JavaScript.
+                        The movies are mainly coming from an API (TVMAZE) with the details about the movies. 
+                        A movie can be liked, check the comments through the pop-up, and even comment on a movie.
+                    </p>
+                    <div class="p_tags">
+                      <p class="p_tag">HTML</p>
+                      <p class="p_tag">CSS</p>
+                      <p class="p_tag">JavaScript</p>
+                    </div>
+                    <div class="p_links">
+                      <a target="_blank" href="https://github.com/luqmanmusah/javascript_capstone">
+                        <i class="fab fa-github"></i> Source
+                      </a>
+                      <a target="_blank" href="https://luqmanmusah.github.io/javascript_capstone/">
+                        <i class="fa fa-sign-out-alt"></i> Live Demo
+                      </a>
+                    </div>
+                  </div>
+            </div>
+            <div class='projects' id="portfolio">
+                <div class="project">
+                  <img class='project_img' src="./assets/BookATable.png" alt="project1">
+                  <div class="p_details">
+                    <h2 class='p_name'>Book A Table</h2>
+                    <p class="p_date">10 Jul. 2021</p>
+                    <p class="p_description">
+                        This is practice project on working with Ruby on Rails and React together.
+                        It allows users to reserve a table, 
+                        Add a restaurant and view multiple restaurant available for booking.
+                    </p>
+                    <div class="p_tags">
+                      <p class="p_tag">Ruby On Rails</p>
+                      <p class="p_tag">React</p>
+                      <p class="p_tag">JavaScript</p>
+                    </div>
+                    <div class="p_links">
+                      <a target="_blank" href="https://github.com/luqmanmusah/Book_Me_A_Table">
+                        <i class="fab fa-github"></i> Source
+                      </a>
+                      <a target="_blank" href="https://github.com/luqmanmusah/Book_Me_A_Table">
+                        <i class="fa fa-sign-out-alt"></i> Live Demo
+                      </a>
+                    </div>
+                  </div>
+            </div>
+            <div class='projects' id="portfolio">
+                <div class="project">
+                  <img class='project_img' src="./assets/rocket.png" alt="project1">
+                  <div class="p_details">
+                    <h2 class='p_name'>Book A Table</h2>
+                    <p class="p_date">10 Jul. 2021</p>
+                    <p class="p_description">
+                        A Prrojest that works on a real live datafrom the SpaceX API. 
+                        A web application that provides commercial and scientific space travel services. 
+                        The application allows users to book rockets and join selected space missions.
+                    </p>
+                    <div class="p_tags">
+                      <p class="p_tag">CSS</p>
+                      <p class="p_tag">React</p>
+                      <p class="p_tag">JavaScript</p>
+                    </div>
+                    <div class="p_links">
+                      <a target="_blank" href="https://github.com/luqmanmusah/Space-Traveler-Hub">
+                        <i class="fab fa-github"></i> Source
+                      </a>
+                      <a target="_blank" href="https://trusting-poitras-39fd6a.netlify.app/">
+                        <i class="fa fa-sign-out-alt"></i> Live Demo
+                      </a>
+                    </div>
+                  </div>
+            </div>
     </div>
 
 </body>
