--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <script src="https://kit.fontawesome.com/e2ffc0b607.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div>
         <nav>
-            <h1>Luqman</h1>
-            <div>
+            <h1>MySelf</h1>
+            <div class="nav_links">
                 <a href="">Home</a>
                 <a href="">About</a>
                 <a href="">Projects</a>
@@ -19,7 +20,6 @@
             </div>
         </nav>
     </div>
-    <h1>Myself</h1>
     <hr id="red_lines">
     <br>
     <hr id='top_blue_line'>
@@ -201,6 +201,37 @@
                     </div>
                   </div>
             </div>
+            <div class="contact-right">
+                <h2 class="contact-title">Get in Touch</h2>
+                <div class="divider"></div>
+                <div class="contact_info">
+                  <p>
+                    <i class="fa fa-envelope contact_icon"></i>
+                        musahluqman@gmail.com
+                  </p>
+                  <p>
+                    <i class="fa fa-phone contact_icon"></i>
+                    (+233)248574571
+                  </p>
+                  <p>
+                    <i class="fa fa-map-marker contact_icon"></i>
+                    Accra, Ghana
+                  </p>
+                </div>
+                <div class="foot-links-div">
+                  <a class="foot_link" target="_blank" href="https://www.linkedin.com/in/luqmanmusah/">
+                    <i class="fab fa-linkedin foot_link_icon"></i>
+                  </a>
+                  <a class="foot_link" target="_blank" href="https://github.com/luqmanmusah">
+                    <i class="fab fa-github foot_link_icon"></i>
+                  </a>
+                  <a class="foot_link" href="https://twitter.com/luqbo1">
+                    <i class="fab fa-twitter foot_link_icon"></i>
+                  </a>
+                  <a class="foot_link" href="https://angel.co/u/luqmanmusah">
+                    <i class="fab fa-angellist foot_link_icon"></i>
+                  </a>
+                </div>
     </div>
 
 </body>
